--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "react-awesome-blog",
- 
   "proxy": "http://127.0.0.1:5000",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +10,7 @@
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.3",
     "mongoose": "^6.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
